# innvestigate

./: .flake8  .git-blame-ignore-revs  .gitconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE  LeNetWeights.h5  README.md  TODO_LIST.txt  TODO_LIST_LRP.txt  VERSION.md  canonization.md  dev_env_requirements.txt  embedding_minimal_example.py  gamma_test.py  mypy.ini  plot_test.py  pyproject.toml  read_the_docs_requirements.txt  requirements.txt  setup.cfg  setup.py  small_tests.py  testNewFeature.py  todo_before_release.md  todo_before_release.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  pythonapp.yml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/modules/: analyzer.rst  applications.rst  innvestigate.rst  tools.rst  utils.rst
examples/: all_methods.py  all_methods_lrp.py  embedding_minimal_example.py  environment.yml  imagenet_analyze_different_methods.py  imagenet_compare_methods.ipynb  imagenet_compare_networks.ipynb  imagenet_example.ipynb  imagenet_lrp.py  introduction.ipynb  introduction_development.ipynb  mnist_all_methods.py  mnist_compare_methods.ipynb  mnist_lrp.py  mnist_neuron_selection.ipynb  mnist_perturbation.ipynb  mnist_perturbation.py  mnist_select_neuron.py  nbconvert.py  plot_all_methods_all_networks.py  readme_code_snippet.py  run_everything.sh  sentiment_analysis.ipynb  train_pattern_imagenet.py  utils.py  utils_imagenet.py  utils_mnist.py
examples/images/: imagenet_label_mapping  synset_id_to_class  wget_imagenet_2011_samples.sh
examples/notebooks/: deeplift.ipynb  imagenet_analyze_different_methods.ipynb  imagenet_compare_methods.ipynb  imagenet_compare_networks.ipynb  imagenet_composite_lrp.ipynb  imagenet_example.ipynb  introduction.ipynb  introduction_development.ipynb  mnist_compare_methods.ipynb  mnist_example.ipynb  mnist_example_neuron_select.ipynb  mnist_neuron_selection.ipynb  mnist_perturbation.ipynb  sentiment-analysis.ipynb  sentiment_analysis.ipynb
examples/utils/: __init__.py  imagenet.py  mnist.py  nbconvert.py  train_pattern_imagenet.py  utils_imagenet.py  utils_mnist.py
innvestigate/: __init__.py  layers.py
innvestigate/analyzer/: __init__.py  base.py  deeplift.py  deeptaylor.py  gradient_based.py  misc.py  new_base.py  new_gradient_based.py  pattern_based.py  relevance_based.py  reverse_map.py  wrapper.py
innvestigate/analyzer/relevance_based/: __init__.py  relevance_analyzer.py  relevance_analyzer_new.py  relevance_rule.py  relevance_rule_base.py  relevance_rule_conv.py  relevance_rule_dense.py  relevance_rule_new.py  relevance_rule_pool.py  utils.py
innvestigate/applications/: imagenet.py  mnist.py
innvestigate/backend/: __init__.py
innvestigate/legacy/utils/tests/: dryrun.py
innvestigate/tests/analyzer/: base.py  gradient_based.py  misc.py  pattern_based.py  relevance_based.py  test_base.py  test_deeplift.py  test_deeptaylor.py  test_gradient_based.py  test_init.py  test_misc.py  test_pattern_based.py  test_relevance_based.py  test_wrapper.py  wrapper.py
innvestigate/tests/tools/: pattern.py  test_pattern.py  test_perturbate.py
innvestigate/tests/utils/: test_visualizations.py
innvestigate/tests/utils/keras/: test_graph.py
innvestigate/tests/utils/tests/: dryrun.py  test_dryrun.py  test_layer.py
innvestigate/tools/: __init__.py  pattern.py  perturbate.py
innvestigate/utils/: __init__.py  visualizations.py
innvestigate/utils/keras/: __init__.py  backend.py  checks.py  functional.py  graph.py
innvestigate/utils/tests/: dryrun.py  layer.py
innvestigate/utils/tests/cases/: __init__.py  cnn.py  helper.py  mlp.py  (+2 more)
src/innvestigate/: __init__.py  applications.py  layers.py
src/innvestigate/analyzer/: __init__.py  base.py  deeplift.py  deeptaylor.py  gradient_based.py  misc.py  network_base.py  pattern_based.py  reverse_base.py  wrapper.py
src/innvestigate/applications/: imagenet.py  mnist.py
src/innvestigate/backend/: __init__.py  backend.py  checks.py  graph.py  types.py
src/innvestigate/tools/: __init__.py  pattern.py  perturbate.py
src/innvestigate/utils/: __init__.py  sequence.py  types.py  visualizations.py
tests/: _debug.py  _monkeytype.py  dryrun.py  layer.py
tests/analyzer/: test_base.py  test_deeplift.py  test_deeptaylor.py  test_gradient_based.py  test_init.py  test_misc.py  test_pattern_based.py  test_reference_layer.py  test_reference_vgg16.py  test_relevance_based.py  test_wrapper.py
tests/backend/: test_checks.py  test_graph.py  test_layer.py  test_layer_idx.py  test_model_wo_output_activation.py  test_model_wo_softmax.py  test_neuron_selection.py
tests/networks/: __init__.py  base.py  cifar10.py  imagenet.py  mnist.py  trivia.py
tests/references/layer/: BaselineGradient.hdf5  BoundedDeepTaylor.hdf5  Deconvnet.hdf5  DeepTaylor.hdf5  Gradient.hdf5  GuidedBackprop.hdf5  InputTimesGradient.hdf5  IntegratedGradients.hdf5  LRPAlpha1Beta0.hdf5  LRPAlpha1Beta0IgnoreBias.hdf5  LRPAlpha2Beta1.hdf5  LRPAlpha2Beta1IgnoreBias.hdf5  LRPEpsilon.hdf5  LRPEpsilonIgnoreBias.hdf5  LRPFlat.hdf5  LRPSequentialPresetA.hdf5  LRPSequentialPresetAFlat.hdf5  LRPSequentialPresetB.hdf5  LRPSequentialPresetBFlat.hdf5  LRPSequentialPresetBFlatUntilIdx.hdf5  LRPWSquare.hdf5  LRPZ.hdf5  LRPZIgnoreBias.hdf5  LRPZPlus.hdf5  LRPZPlusFast.hdf5  LRPZ_Flat_input_layer_rule.hdf5  LRPZ_boxed_input_layer_rule.hdf5  SmoothGrad.hdf5
tests/tools/: test_pattern.py  test_perturbate.py
tests/utils/: test_checks.py  test_visualizations.py
tests/utils/keras/: test_graph.py
tests/utils/tests/: test_dryrun.py  test_layer.py
weber@172.17.25.141/: layers.py
weber@172.17.25.141/analyzer/: __init__.py  gradient_based.py  reverse_map.py
weber@172.17.25.141/analyzer/relevance_based/: relevance_rule_base.py
weber@172.17.25.141/tests/analyzer/: test_deeptaylor.py  test_init.py  test_pattern_based.py  test_wrapper.py
weber@172.17.25.141/tests/tools/: test_pattern.py  test_perturbate.py
weber@172.17.25.141/tools/: pattern.py
weber@172.17.25.141/utils/keras/: __init__.py  backend.py  graph.py
(+16 files in other folders)
