[tool.poetry]
name = "innvestigate"
version = "2.0.1"
description = "A toolbox to innvestigate neural networks' predictions."
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console", 
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    "Maxmilian Alber <workDoTalberDoTmaximilian@gmail.com>",
    "Adrian Hill <hill@tu-berlin.de>",
    "Sebastian Lapuschkin",
    "Miriam Haegele",
    "Kristof Schuett",
    "Philipp Seegerer",
    "Pieter-Jan Kindermans",
    "Henry Webel",
    "Leander Weber",
    "and others",
]
maintainers = ["Adrian Hill <hill@tu-berlin.de>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/albermax/innvestigate"
repository = "https://github.com/albermax/innvestigate"
documentation = "https://innvestigate.readthedocs.io/en/latest/"
keywords = ["XAI", "LRP", "Deep Taylor",]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = ">=2.6,<2.11"
future = "^0.18.2"
numpy = "^1.22"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black  = "^22.3"
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.11.29"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.1.1"
pep8-naming = "^0.11.1"
Pillow = "^9.0.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
coverage = {extras = ["toml"], version = "^5.5"}
codecov = "^2.1.11"
rope = "^0.18.0"
pylint = "^2.12.2"
ipykernel = "^5.5.6"
isort = "^5.10.1"
mypy = "^0.812"
MonkeyType = "^20.5.0"
vulture = "^2.3"
Sphinx = "^4.4.0"
pandas = "^1.3"
ftfy = "^6.1.1"
pyupgrade = "^2.32.1"
pre-commit = "^2.19.0"

[tool.isort]
profile = "black"
multi_line_output = 3 
known_first_party = "innvestigate"
known_local_folder = "tests"

[tool.pytest.ini_options]
addopts = "-v -m fast --strict-markers --cov"
# NOTE: locally run tests with `poetry run pytest -m precommit` before a commit 
markers = [
    "precommit",
    "slow",
    "fast",
    "local",
    "graph",
    "application",
    "mnist",
    "reference",
    "layer",
    "ilayers",
    "vgg16",
    "imagenet",
    "resnet50",
    "base",
    "deeptaylor",
    "gradient",
    "init",
    "lrp",
    "wrapper",
    "perturbate",
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["innvestigate"]

[tool.coverage.report]
show_missing = false

# Build with Poetry
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"